fix: Resolve SonarQube security hotspot for HttpOnly cookie